--- a/dev/ideas.html
+++ b/dev/ideas.html
@@ -1,8 +1,11 @@
+<input type="text" id="word"><button onclick="newWord()">Get Sentence</button>
+<p>-------------------------</p>
 <div id="base"></div>
 <p>-------------------------</p>
 <div id="test"></div>
 <p>-------------------------</p>
 <div id="sentence"></div>
+<p>-------------------------</p>
 
 <script
   src="https://code.jquery.com/jquery-3.2.1.min.js"
